compiler/tests/fixtures/invalid/semantics/sifting_references_undefined_pattern.viv
// Invalid: sifting references undefined pattern

action searcher:
    roles:
        @actor:
            as: initiator
    conditions:
        sift pattern nonexistent:
            over: @actor
